# gl-editor

./: CMakeLists.txt  README.md
include/editor/: editor.hpp  editorState.hpp  selectState.hpp  state.hpp
include/ifcg/: ifcg.hpp
include/ifcg/common/: mesh.hpp
include/ifcg/graphics3D/geometry/: mesh.hpp
src/editor/: editor.cpp  editorState.cpp  selectState.cpp
src/ifcg/graphics3D/geometry/: mesh.cpp
tests/: main.cpp
